Fixed header font issue on iOS devices. Added copyright to page footer.

--- a/source/stylesheets/app.css.scss
+++ b/source/stylesheets/app.css.scss
@@ -26,6 +26,16 @@
 
 h1, h2, h3, h4, h5, h6 {
   color: $headerFontColor;
+  @include respondTo(smallScreen) {
+    font-size: 26px;
+    font-weight: normal;
+    font-family: $bodyFontFamily;
+  }
+  @include respondTo(mediumScreen) {
+    font-size: ms(3);
+    font-weight: normal;
+    font-family: $bodyFontFamily;
+  }
 }
 
 body {
